--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="text_sort_by">Sort by:</string>
     <string name="title_overview">Overview</string>
     <string name="title_favorites">Favorites</string>
+    <string name="hint_search_on_movie">Search on movie</string>
 </resources>
